--- a/css/daroc.webflow.css
+++ b/css/daroc.webflow.css
@@ -552,8 +552,8 @@
   padding-top: 100px;
   padding-bottom: 100px;
   background-color: #272727;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.64)), to(rgba(0, 0, 0, 0.64))), url('../images/15271662-White-line-on-the-green-soccer-field-from-top-view-Stock-Photo.jpg');
-  background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.64), rgba(0, 0, 0, 0.64)), url('../images/15271662-White-line-on-the-green-soccer-field-from-top-view-Stock-Photo.jpg');
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.64)), to(rgba(0, 0, 0, 0.64))), url('../images/IMG_4673-1.JPG');
+  background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.64), rgba(0, 0, 0, 0.64)), url('../images/IMG_4673-1.JPG');
   background-position: 0px 0px, 100% 50%;
   background-size: auto, cover;
   background-attachment: scroll, fixed;
@@ -788,6 +788,18 @@
   background-size: auto, cover;
 }
 
+.link-block-2 {
+  width: 25%;
+}
+
+.div-block-7 {
+  display: none;
+}
+
+.image-4 {
+  display: block;
+}
+
 html.w-mod-js *[data-ix="appearlate"] {
   opacity: 0;
 }
@@ -809,6 +821,8 @@ html.w-mod-js *[data-ix="appearlate-2"] {
 
 @media screen and (max-width: 991px) {
   .navbar.transparence {
+    padding-top: 8px;
+    padding-bottom: 8px;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: reverse;
     -webkit-flex-direction: row-reverse;
@@ -820,6 +834,11 @@ html.w-mod-js *[data-ix="appearlate-2"] {
     width: 90%;
   }
 
+  .navmenu {
+    margin-right: 0px;
+    background-color: #3c6;
+  }
+
   .menubutton {
     display: -webkit-box;
     display: -webkit-flex;
@@ -829,7 +848,18 @@ html.w-mod-js *[data-ix="appearlate-2"] {
     -webkit-justify-content: flex-end;
     -ms-flex-pack: end;
     justify-content: flex-end;
+    border-radius: 50px;
+    background-color: #3c6;
     color: #fff;
+  }
+
+  .navlink.white {
+    -webkit-transition: opacity 575ms ease;
+    transition: opacity 575ms ease;
+  }
+
+  .navlink.white:hover {
+    background-color: hsla(0, 0%, 100%, 0.3);
   }
 
   ._01.page2 {
@@ -880,6 +910,19 @@ html.w-mod-js *[data-ix="appearlate-2"] {
     padding-top: 64px;
     padding-bottom: 128px;
   }
+
+  .link-block-2 {
+    width: 75%;
+  }
+
+  .div-block-7 {
+    display: block;
+    padding: 32px;
+  }
+
+  .image-4 {
+    display: block;
+  }
 }
 
 @media screen and (max-width: 767px) {
@@ -894,6 +937,12 @@ html.w-mod-js *[data-ix="appearlate-2"] {
 
   .menubutton {
     display: none;
+    color: #fff;
+  }
+
+  .menubutton.w--open {
+    border-radius: 70px;
+    background-color: #3c6;
     color: #fff;
   }
 
@@ -996,7 +1045,7 @@ html.w-mod-js *[data-ix="appearlate-2"] {
   }
 
   .navmenu {
-    width: 100%;
+    width: 70%;
     margin-top: 0px;
   }
 
@@ -1037,7 +1086,6 @@ html.w-mod-js *[data-ix="appearlate-2"] {
 
   .navlink.white {
     padding-left: 32px;
-    background-color: #000;
   }
 
   ._01 {
