--- a/css/daroc.webflow.css
+++ b/css/daroc.webflow.css
@@ -82,7 +82,7 @@
   z-index: 2;
   display: inline-block;
   width: 100%;
-  max-width: 11ch;
+  max-width: 14ch;
   float: none;
   color: #fff;
   font-size: 80px;
@@ -378,9 +378,10 @@
 }
 
 .linkprofile {
-  display: none;
+  display: inline-block;
   margin-right: 12px;
   padding-bottom: 6px;
+  float: right;
   border-bottom: 1px solid #cecece;
   color: #250c0c;
   font-size: 17px;
@@ -390,6 +391,10 @@
 .linkprofile:hover {
   border-bottom-color: #0c0c0c;
   color: #000;
+}
+
+.linkprofile.hidden {
+  display: none;
 }
 
 ._03 {
@@ -552,11 +557,9 @@
   padding-top: 100px;
   padding-bottom: 100px;
   background-color: #272727;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.64)), to(rgba(0, 0, 0, 0.64))), url('../images/IMG_4673-1.JPG');
-  background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.64), rgba(0, 0, 0, 0.64)), url('../images/IMG_4673-1.JPG');
-  background-position: 0px 0px, 100% 50%;
-  background-size: auto, cover;
-  background-attachment: scroll, fixed;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#3c6), to(#3c6));
+  background-image: linear-gradient(180deg, #3c6, #3c6);
+  background-position: 0px 0px;
 }
 
 .ball {
@@ -742,10 +745,10 @@
   display: -ms-flexbox;
   display: flex;
   padding-top: 32px;
-  -webkit-box-pack: end;
-  -webkit-justify-content: flex-end;
-  -ms-flex-pack: end;
-  justify-content: flex-end;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
 }
 
 .image-3 {
@@ -758,6 +761,7 @@
 
 .container {
   max-width: 1200px;
+  padding-left: 85px;
 }
 
 .div-block-5 {
@@ -773,13 +777,19 @@
   display: -ms-flexbox;
   display: flex;
   max-width: 1200px;
+  padding-left: 86px;
   -webkit-box-align: end;
   -webkit-align-items: flex-end;
   -ms-flex-align: end;
   align-items: flex-end;
 }
 
+.div-block-6 {
+  width: 50%;
+}
+
 .section {
+  position: relative;
   padding-top: 128px;
   padding-bottom: 128px;
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url('../images/emerson-vieira-V6kZMhjWveo-unsplash.jpg');
@@ -798,6 +808,31 @@
 
 .image-4 {
   display: block;
+}
+
+.bold-text-2 {
+  color: #3c6;
+}
+
+.image-5 {
+  max-width: 120px;
+  margin-top: 8px;
+}
+
+.column-2 {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 html.w-mod-js *[data-ix="appearlate"] {
@@ -896,12 +931,18 @@ html.w-mod-js *[data-ix="appearlate-2"] {
     display: none;
   }
 
+  .container {
+    padding-right: 32px;
+    padding-left: 32px;
+  }
+
   .container-3 {
     padding-right: 32px;
     padding-left: 32px;
   }
 
   .div-block-6 {
+    width: 100%;
     padding: 16px;
   }
 
@@ -994,6 +1035,10 @@ html.w-mod-js *[data-ix="appearlate-2"] {
     -webkit-flex-direction: column;
     -ms-flex-direction: column;
     flex-direction: column;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
   }
 }
 
@@ -1272,6 +1317,7 @@ html.w-mod-js *[data-ix="appearlate-2"] {
   }
 
   .div1contact {
+    width: 100%;
     margin-top: 47px;
   }
 
@@ -1305,11 +1351,6 @@ html.w-mod-js *[data-ix="appearlate-2"] {
 }
 
 #w-node-ad859468-aa8a-7132-0837-e120baf5e9bc-380771bb {
-  -ms-grid-column-align: start;
-  justify-self: start;
-}
-
-#w-node-b4f54594-706f-db60-a783-54612970d6e8-380771bb {
   -ms-grid-column-align: start;
   justify-self: start;
 }
