--- a/css/daroc.webflow.css
+++ b/css/daroc.webflow.css
@@ -588,6 +588,10 @@
   letter-spacing: 0.4px;
 }
 
+.div1contact {
+  padding-left: 21px;
+}
+
 .linkintxt {
   padding-bottom: 5px;
   border-bottom: 1px solid #3d3d3d;
